# Abby

./: .dockerignore  .env.example  .gitignore  ADC_binding_affinity.md  Backend_Architecture_Abby.md  Dev_Plan.md  Dev_Plan_Biopython.md  Dev_Plan_CompDetRAE.md  Dev_Plan_Implementation_Checklist.md  Dockerfile  Frontend_Architecture_Abby.md  GROMACS_&_biopython.md  LICENSE  OpenAPI_Abby_v1.yaml  PDB_PDBx_mmCIF_disulfide_bonds_&_sidechain_glycosylation.md  README.md  RELEASE_NOTES.md  V1_Product_Spec_Abby.md  VHH_support.md  antibodies_SPR.md  aptamers_molecular_dynamics.md  convert_pdb_to_pdbx.md  docker-compose.yml  molecular_visualization_2026.md  prediction_properties_bioconjugated_proteins.md  pyproject.toml  schema_&_failure_modes_PDB_vs_PDBx_mmCIF_.md  self-healing_CI_pipeline.docx  service_layer_dev_plan.md  validation_plan.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  (+3 more)
Perturbations/: CRISPR_edits_perturb.md  LNP_conjugation_perturb.md  PEG_XTEN_conjugation_perturb.md  small_molecule_conjugation_perturb.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
scripts/: run_andd_validation.py
tests/: test_baseline_models.py  test_batch_jobs.py  test_cdr_annotation.py  test_cdr_calibration_runner.py  test_cdr_quality_calibration.py  test_cdr_stress_harness.py  test_dataset_governance.py  test_feature_extraction.py  test_health.py  test_learned_models.py  test_simulation.py  test_structure_flow.py  test_validation_harness.py  test_worker_backend.py
(+82 files in other folders)
