[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abby-api"
version = "0.1.0"
description = "Starter FastAPI server for the Abby affinity prediction platform"
readme = "V1_Product_Spec_Abby.md"
requires-python = ">=3.8"
dependencies = [
  "biopython>=1.84",
  "eval-type-backport>=0.2.0",
  "fastapi>=0.115.0",
  "openpyxl>=3.1.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
